--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,12 +14,12 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18'  
+        node-version: 18.  
 
     - name: Install dependencies
       run: |
@@ -30,7 +30,7 @@ jobs:
         npx cypress run --reporter junit --reporter-options "mochaFile=results/test-results.xml"
 
     - name: Upload test results
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
         name: test-results
         path: results/test-results.xml
