--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,10 @@ jobs:
 
     - name: Run Cypress tests
       run: |
-        npx cypress run --headless --reporter junit --reporter-options "mochaFile=results/test-results.xml"
+        npx cypress run --headless
 
     - name: Upload test results
       uses: actions/upload-artifact@v3
       with:
         name: test-results
-        path: results/test-results.xml
+        path: cypress/reports/mochawesome.json
