--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       run: |
         npx cypress run --headless
 
-    - name: Upload test results
+    - name: Upload HTML Report
       uses: actions/upload-artifact@v4
       with:
-        name: test-results
-        path: cypress/reports/mochawesome.json
+        name: mochawesome-html-report
+        path: cypress/reports/*.html
