--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress run",
-    "test:headless": "cypress run --headless"
+    "test:headless": "cypress run --headless",
+    "generate:report": "npx marge cypress/reports/mochawesome.json --reportDir cypress/reports --reportFilename mochawesome.html && npx marge cypress/reports/mochawesome_001.json --reportDir cypress/reports --reportFilename mochawesome_001.html"
   },
   "keywords": [],
   "author": "",
