--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,8 @@ jobs:
       run: |
         npx cypress run --headless
 
-    - name: Generate HTML report
-      run: |
-        npx marge cypress/reports/mochawesome.json --reportDir cypress/reports --reportFilename mochawesome.html && npx marge cypress/reports/mochawesome_001.json --reportDir cypress/reports --reportFilename mochawesome_001.html
-
-    - name: Upload HTML Report
+    - name: Upload test results
       uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: cypress/reports/mochawesome.html
+        path: cypress/reports/mochawesome.json
