--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,4 +32,6 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: test-results
-        path: cypress/reports/mochawesome.json
+        path: |
+          cypress/reports/mochawesome.json
+          cypress/reports/mochawesome_001.json
